--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 <body>
 
-    <div style="text-align:center" ;><img src="/home/rahul-sidhu/webHost/240101095-lab-3-Img.jpeg" alt="My Photo"></div>
+    <div style="text-align:center" ;><img src="240101095-lab-3-Img.jpeg" alt="My Photo"></div>
 
     <h1>Welcome to My Website</h1>
     <h2>Overview</h2>
