--- a/personalInfo.html
+++ b/personalInfo.html
@@ -62,7 +62,7 @@
     </style>
 </head>
 
-<body> <img src="/home/rahul-sidhu/webHost/240101095-lab-3-Img.jpeg" alt="My Photo">
+<body> <img src="240101095-lab-3-Img.jpeg" alt="My Photo">
 
     <h1>About Me</h1>
     <p><strong>Name:</strong> Rahul Sidhu</p>
